Updated password method and form info

--- a/templates/setting.html
+++ b/templates/setting.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="field">
-                                <label class="label" for="password">Password:</label>
+                                <label class="label" for="password">Password: (Leave blank to not change password)</label>
                                 <div class="control">
                                     {{ form.password(id="password", type="text", class="input", placeholder="") }}
                                     <ul>
