modifying profile page

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,9 @@
                                 <a class="navbar-item" href='{{ url_for("accountinfo") }}'>
                                     Account settings
                                 </a>
+                                <a class="navbar-item" href='/users/{{ user_id }}'>
+                                    Testing
+                                </a>
                                 <hr class="navbar-divider">
                                 <a onclick="$('#logoutOptionsModal').fadeIn('fast')"
                                    class="navbar-item has-text-danger-dark">
