--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                                     <p class="has-text-weight-bold">Logged in as</p>
                                     <p>{{ user.name }}</p>
                                 </div>
-                                <a class="navbar-item" href='/users/{{ user_id }}'>
+                                <a class="navbar-item" href='/users/{{ user._id }}'>
                                     Your profile
                                 </a>
                                 <a class="navbar-item" href='{{ url_for("all_bookings") }}'>
