--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -16,85 +16,8 @@
 
     <section class="section">
         <div class="container">
-            <div class="columns">
-                <div class="column">
-                    <!-- START: Vertical Card -->
-                    <div class='box p-5 vertical'>
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                        <div class="ml-4">
-                            <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
-                            </div>
-                            <h1 class='title is-4'>Bishan Nightlife</h1>
-                            <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                    class="is-size-5">From</small>
-                                $100
-                            </p>
-                            <br>
-                        </div>
-                        <div class="buttons">
-                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
-                                    class="fas fa-heart-broken"></i>&ensp;Remove
-                                from wishlist</a>
-                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                        </div>
-                    </div>
-                    <!-- END: Vertical Card -->
-                </div>
-                <div class="column">
-                    <!-- START: Vertical Card -->
-                    <div class='box p-5 vertical'>
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                        <div class="ml-4">
-                            <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
-                            </div>
-                            <h1 class='title is-4'>Bishan Nightlife</h1>
-                            <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                    class="is-size-5">From</small>
-                                $100
-                            </p>
-                            <br>
-                        </div>
-                        <div class="buttons">
-                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
-                                    class="fas fa-heart-broken"></i>&ensp;Remove
-                                from wishlist</a>
-                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                        </div>
-                    </div>
-                    <!-- END: Vertical Card -->
-                </div>
-                <div class="column">
-                    <!-- START: Vertical Card -->
-                    <div class='box p-5 vertical'>
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                        <div class="ml-4">
-                            <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
-                            </div>
-                            <h1 class='title is-4'>Bishan Nightlife</h1>
-                            <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                    class="is-size-5">From</small>
-                                $100
-                            </p>
-                            <br>
-                        </div>
-                        <div class="buttons">
-                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
-                                    class="fas fa-heart-broken"></i>&ensp;Remove
-                                from wishlist</a>
-                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                        </div>
-                    </div>
-                    <!-- END: Vertical Card -->
-                </div>
+            <div class="columns is-multiline" id='displayListings'>
+                {% include 'components/listing-card.html' %}
             </div>
         </div>
     </section>
