Added uwu defualt ace

--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -40,21 +40,28 @@
                 </div>
                 <div class="tour-footer has-background-light">
                     <div class="buttons">
-                        <a class="button has-text-primary" href='/discover/{{ item["_id"] }}/booknow'><i
-                                class="fas fa-arrow-right"></i>&ensp;Book now</a>
-
-                        {% if inside_wl == True %}
-                        <a class="button" style="color:rgb(226, 48, 78)" href='/me/wishlist/remove/{{ item["_id"] }}'><i
-                            class="fas fa-heart-broken"></i>&ensp;Remove from wishlist</a>
-                        {% else %}
-                        <a class="button" style="color:rgb(226, 48, 78)" href='/me/wishlist/add/{{ item["_id"] }}'><i
-                                class="fas fa-heart"></i>&ensp;Add
-                            to wishlist</a>
-                        {% endif %}
 
                         {% if editable == True %}
+
+                            <a class="button is-white" style="color:rgb(226, 48, 78)"
+                                href='/listings/delete/{{ item["_id"] }}'><i class="fas fa-trash-alt"></i>&ensp;Delete</a>
                             <a class="button has-text-link" href='/listings/edit/{{ item["_id"] }}'><i
-                                    class="fas fa-clipboard"></i>&ensp;Edit Listing</a>
+                                class="fas fa-clipboard"></i>&ensp;Edit Listing</a>
+
+
+                        {% else %}
+                            <a class="button has-text-primary" href='/discover/{{ item["_id"] }}/booknow'><i
+                                    class="fas fa-arrow-right"></i>&ensp;Book now</a>
+
+                            {% if inside_wl == True %}
+                                <a class="button" style="color:rgb(226, 48, 78)" href='/me/wishlist/remove/{{ item["_id"] }}'><i
+                                    class="fas fa-heart-broken"></i>&ensp;Remove from wishlist</a>
+                                {% else %}
+                                <a class="button" style="color:rgb(226, 48, 78)" href='/me/wishlist/add/{{ item["_id"] }}'><i
+                                        class="fas fa-heart"></i>&ensp;Add
+                                    to wishlist</a>
+                            {% endif %}
+                        
                         {% endif %}
                     </div>
                 </div>
