Added new chat UI.

--- a/public/css/pages/chat.css
+++ b/public/css/pages/chat.css
@@ -1,6 +1,14 @@
-#chat-hero {
-    background: /*url("/imgs/chat.jpg")*/ center scroll no-repeat;
-    background-size: cover;
-    background-color: rgba(0, 0, 0, 0.55);
-    background-blend-mode: overlay;
+.recipient-header {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px
+}
+
+.recipient-header-lower {
+    padding-top:0 !important;
+    border-bottom: 4px #fff dashed;
+}
+
+#messageContainer {
+    height: 35rem;
+    overflow:scroll;
 }
