--- a/templates/chat.html
+++ b/templates/chat.html
@@ -104,15 +104,13 @@
                     <div class="container chat-main">
                         {% if chatroom_display != False %}
                             <div class="box p-0">
-                                <div class="p-5 has-background-light"
-                                     style="border-top-left-radius: 4px; border-top-right-radius: 4px">
+                                <div class="p-5 has-background-light recipient-header">
                                     <h2 class="title is-4 has-text-weight-bold has-text-dark">
                                         {{ chatroom_names|safe }}
                                     </h2>
                                 </div>
-                                <div id="messageContainer" style="height: 35rem; overflow:scroll;">
-                                    <div class="p-5 has-background-light"
-                                         style="padding-top:0 !important; border-bottom: 4px #fff dashed; ">
+                                <div id="messageContainer">
+                                    <div class="p-5 has-background-light recipient-header-lower">
                                         <p class="subtitle has-text-grey"><i class="fas fa-heart"></i>&ensp;This is the
                                             humble
                                             beginnings of this conversation and the tippy top of it.</p>
