--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -9,6 +9,33 @@
     <link rel="stylesheet" href="/css/pages/chat.css">
     <link rel="stylesheet" href="/css/frameworks/bulma-badge.css">
     <link rel="stylesheet" href="/css/pages/all_bookings.css">
+
+    <script>
+        setInterval(syncEndpoint = () => {
+            $.ajax({
+                url: "/endpoint/chat?chat_id={{selected_chatroom}}",
+                dataType: "json",
+                success: (data) => {
+                    console.log('Syncing with endpoint data.')
+                    incomingMsgs = data.data
+                    currentList = $('#messagesList').html()
+
+                    if (incomingMsgs !== currentList) {
+                        $('#messagesList').html(data.data)
+                        console.log('New data received.')
+                        var $target = $('#messageContainer');
+                        $($target).animate({
+                            scrollTop: $($target)[0].scrollHeight - $($target)[0].clientHeight
+                        }, 0);
+                    } else {
+                        console.log('Nothing new. Ignoring.')
+                    }
+                }
+            })
+        }, 2500)
+
+        syncEndpoint()
+    </script>
 {% endblock %}
 
 {% block content %}
@@ -404,101 +431,97 @@
         <!--START: Chat-->
         <div id="Chat" class="content-tab" style="display:none">
             <div class="container">
-                <!--START: Chat console-->
-                <div class="box p-0">
-                    <!--START: Messages-->
-                    <div class="card" style="height: 60vh;">
-                        <div class="card-header p-1 has-background-grey-light">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg')"></div>
-                            <p class="ml-3 is-size-5 has-text-weight-bold">
-                                HideThePain69 </p>
-                        </div>
-
-                        <div class="p-3" style="overflow-y: scroll; height: 55vh;">
-                            <!--START: message-->
-                            <div class="box is-pulled-left mt-3 p-3 has-background-grey-lighter"
-                                 style="max-width:70%; border-radius:20px 20px 20px 0px;">
-                                <article class="media">
-                                    <figure class="media-left">
-                                        <p class="image is-48x48"><img src="/pfp.jpg"></p>
-                                        <span class="is-size-7">31m</span>
-                                    </figure>
-                                    <div class="media-content">
-                                        <div class="content m-0">
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-                                                magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-                                                sem. Etiam finibus odio quis feugiat facilisis.
-                                            </p>
-                                        </div>
+                                            <div class="box p-0">
+                                <div class="p-5 has-background-light recipient-header">
+                                    <h2 class="title is-4 has-text-weight-bold has-text-dark">
+                                        {{ chatroom_names|safe }}
+                                    </h2>
+                                </div>
+                                <div id="messageContainer">
+                                    <div class="p-5 has-background-light recipient-header-lower">
+                                        <p class="subtitle has-text-grey"><i class="fas fa-heart"></i>&ensp;This is the
+                                            humble
+                                            beginnings of this conversation and the tippy top of it.</p>
                                     </div>
-                                </article>
-                            </div>
-                            <!--END: message-->
-                            <!--START: message-->
-                            <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold"
-                                 style="max-width:70%; border-radius:20px 20px 0px 20px;">
-                                <article class="media">
-                                    <div class="media-content">
-                                        <div class="content m-0">
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-                                                magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-                                                sem. Etiam finibus odio quis feugiat facilisis.
-                                            </p>
-                                        </div>
+                                    <div id="messagesList" class="p-5">
+                                        {% if chatroom_display|count == 0 %}
+                                            <div>
+                                                <p class="has-text-centered has-text-grey has-text-weight-light is-size-5">
+                                                    <span class="is-size-1"><i class="far fa-folder-open"></i></span>
+                                                    <br>
+                                                    <span>Looks like this chat is sparkling clean</span>
+                                                    <br>
+                                                    <small>This chat is empty</small>
+                                                </p>
+                                            </div>
+                                        {% else %}
+                                            {% for i in chatroom_display %}
+                                                <div>
+                                                    <small><a href=""
+                                                              class="has-text-weight-bold">{{ i["sender_name"] }}</a>
+                                                        <span class="has-text-grey">
+                                            {% if i["self"] %}
+                                                — Me
+                                            {% endif %}
+                                        </span>
+                                                    </small>
+                                                    <p>{{ i["msg_content"] }}</p>
+                                                    <hr>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
-                                    <figure class="media-right">
-                                        <p class="image is-48x48"><img src="/pfp.jpg"></p>
-                                        <span class="is-size-7">31m</span>
-                                    </figure>
-                                </article>
-                            </div>
-                            <!--END: message-->
-                            <!--START: message-->
-                            <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold"
-                                 style="max-width:70%; border-radius:20px 20px 0px 20px;">
-                                <article class="media">
-                                    <div class="media-content">
-                                        <div class="content m-0">
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-                                                magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-                                                sem. Etiam finibus odio quis feugiat facilisis.
-                                            </p>
+                                </div>
+
+                                <script>
+                                    var $target = $('#messageContainer');
+                                    $($target).animate({
+                                        scrollTop: $($target)[0].scrollHeight - $($target)[0].clientHeight
+                                    }, 0);
+                                </script>
+
+                                <!--START: Input field-->
+                                <div class="field has-addons">
+                                    <!-- <div class="control">
+                                        <div class="dropdown post-options is-hoverable is-up">
+                                            <div class="dropdown-trigger">
+                                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-post">
+                                                    <span class="icon is-small">
+                                                        <i class="fas fa-paperclip"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
+                                                <div class="dropdown-content">
+                                                    <a class="dropdown-item">
+                                                        Quote a Tour
+                                                    </a>
+                                                    <a class="dropdown-item">
+                                                        <i class="fas fa-photo-video"></i>&ensp;Photos &
+                                                        Videos
+                                                    </a>
+                                                </div>
+                                            </div>
                                         </div>
+                                    </div> -->
+                                    <div class="control is-expanded">
+                                        <form method="POST" style="width: 100%;"
+                                              action="{{ url_for('chat_room', room_id=selected_chatroom) }}">
+{#                                            {{ form.csrf_token }}#}
+{#                                            <!-- <input class="input is-fullwidth" type="text" placeholder="Enter your message.." /> -->#}
+{#                                            {{ form.message(id="message", type="text", class="input is-fullwidth",#}
+{#                                    placeholder="Enter message", value="", autocomplete="off") }}#}
                                     </div>
-                                    <figure class="media-right">
-                                        <p class="image is-48x48"><img src="/pfp.jpg"></p>
-                                        <span class="is-size-7">31m</span>
-                                    </figure>
-                                </article>
+                                    <div class="control">
+                                        <button type="submit" class="button is-primary">
+                                            <i class="fas fa-paper-plane"></i>
+                                        </button>
+                                        </form>
+                                    </div>
+                                </div>
                             </div>
-                            <!--END: message-->
-                        </div>
-
-                    </div>
-                    <!--END: Messages-->
-
-                    <!--START: Input field-->
-                    <div class="field has-addons">
-                        <div class="control">
-                            <button class="button is-white-ter">
-                                <i class="fas fa-photo-video"></i>
-                            </button>
-                        </div>
-                        <div class="control is-expanded">
-                            <input class="input is-fullwidth" type="text" placeholder="Enter your message.."/>
-                        </div>
-                        <div class="control">
-                            <button class="button is-primary">
-                                <i class="fas fa-paper-plane"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--END: Input Field-->
-                    <!--END: Chat console-->
-                </div>
+                            <!--END: Input Field-->
+                            </div>
             </div>
         </div>
         <!--END: Chat-->
