--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -3,6 +3,7 @@
 {% block scripts %}
     <link rel="stylesheet" href="../../public/css/global/shop.css">
     <link rel="stylesheet" href="../../public/css/global/rating.css">
+    <link rel="stylesheet" href="/css/pages/all_bookings.css">
     <script src="/js/jquery.raty.js"></script>
 {% endblock %}
 
@@ -18,18 +19,21 @@
                     <div class="columns is-vcentered">
                         <div class="column">
                             <div class="ml-4">
-                                <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/public/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HideThePain69</b></div>
+                                <div class="listing-author">
+                                    <div class="profile-img"
+                                         style="background-image: url('data:image/jpeg;base64, {{ tour.tg_img }}')">
+                                    </div>
+                                    <div class="ml-2"><b>{{ tour.tg_name }}</b> <span>is offering:</span>
+                                    </div>
                                 </div>
-                                <h1 class='title'>Bishan Nightlife</h1>
-                                <p class="subtitle">Explore the night life of Bishan</p>
+                                <h1 class='title'>{{tour.tour_name}}</h1>
+                                <p class="subtitle truncate is-size-6 has-text-grey">{{ tour.tour_desc }}</p>
                                 <br>
                             </div>
                         </div>
                         <div class="column">
-                            <div class="box listing-img"
-                                 style="background-image: url('/public/places/bishan.jpg');"></div>
+                                    <div class="box listing-img"
+                                         style="background-image: url('data:image/jpeg;base64, {{ tour.tour_img }}');"></div>
                         </div>
                     </div>
 
