--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,9 +14,10 @@
         <div class="column is-one-quarter mt-6">
             <div class="section">
                 <div class="box is-centered">
-                    <div class="profile-img-onprofile" style="background-image: url('/pfp.jpg');"></div>
+
+                    <div class="profile-img-onprofile" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                     <br>
-                    <p class="title is-5 is-spaced">HidethePain</p>
+                    <p class="title is-5 is-spaced">{{ user.name }}</p>
                     <form class="form-horizontal" action="/users" method="POST">
                         {{ form.csrf_token }}
                         <fieldset>
@@ -31,13 +32,16 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="field is-small">
-                                <label class="label" for="bio-submit"></label>
-                                <div class="control">
-                                    <input type='submit' value='Save' id="bio-submit" name="bio-submit"
-                                           class="button is-success">
+                            {% if editable %}
+                                <div class="field is-small">
+                                    <label class="label" for="bio-submit"></label>
+                                    <div class="control">
+                                        <input type='submit' value='Save' id="bio-submit" name="bio-submit"
+                                               class="button is-success">
+                                    </div>
                                 </div>
-                            </div>
+                            {% endif %}
+
                         </fieldset>
                     </form>
                     <span class="tag is-success">Verified</span>
