Working on review form

--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -38,6 +38,8 @@
                     </div>
 
                     <form>
+                    <!-- <form id='review_form' method="POST" action="{{ url_for('review', book_id=book_id) }}"> -->
+                        <!-- {{ form.csrf_token }} -->
                         <fieldset>
                             <div class="field has-text-centered">
                                 <div class="star"></div>
