Fix directory error

--- a/templates/internal/dashboard.html
+++ b/templates/internal/dashboard.html
@@ -113,5 +113,5 @@
             </div>
         </div>
     </section>
-    <script defer src="/js/admin.js"></script>
+    <script defer src="/js/dashboard/admin.js"></script>
 {% endblock %}
